# Cairn-Synthesis-Lab

./: .gitignore  CLAUDE.md  Cairn_Material_System_Mapping.md
.claude/: settings.local.json
.claude/commands/: mkpc.md
backend/: Cargo.toml
backend/cairn-api/: Cargo.toml
backend/cairn-api/src/: main.rs
backend/cairn-models/: Cargo.toml
backend/cairn-models/src/: lib.rs  mechanics.rs
frontend/: analysis-modules.jsx  app.css  app.jsx  charts.jsx  dashboard.jsx  digital-lab.jsx  formulation.jsx  help.jsx  index.html  state.js  tokens.css  ui.jsx  wizard.css  wizard.html  wizard.jsx
