[package]
name = "cairn-api"
version = "0.1.0"
edition = "2021"

[dependencies]
cairn-models = { path = "../cairn-models" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.10", features = ["cors"] }
